tweak: (server.cfg) GameBuild

--- a/server.cfg
+++ b/server.cfg
@@ -4,8 +4,8 @@ endpoint_add_udp "0.0.0.0:30120"
 ### Endpoints Privacy ###
 sv_endpointPrivacy true
 sv_hostname "SUPV template ESX-Legacy OX"
-set steam_webApiKey "ED1BE25ACA7CD49F7A5AD8B99B05CB44"
-sv_licenseKey "vwfcrx8xm772lxcv6s2o18fkc4pzs1sb"
+set steam_webApiKey ""
+sv_licenseKey ""
 sv_maxclients 8   # Allow access to features usually locked behind a FiveM patreon key
 
 sets sv_projectName "SUPV template ESX-Legacy OX"
@@ -14,7 +14,7 @@ sets locale "fr-FR"
 setr ox:locale fr
 sets tags "SUPV template ESX-Legacy OX"
 sv_scriptHookAllowed 0
-set sv_enforceGameBuild 2699
+set sv_enforceGameBuild 2802
 
 # set onesync on #(ACTIVE IT IF YOU DON'T USE TX ADMIN!!!)
 
