--- a/server.cfg
+++ b/server.cfg
@@ -27,10 +27,6 @@ set mysql_connection_string "mysql://root:abc123@localhost/template_supv_esx?wai
 set mysql_ui true
 
 ## Add system admins
-add_ace resource.starts command.exec allow
-add_ace resource.starts command.ensure allow
-add_ace resource.starts command.start allow
-add_ace resource.starts command.stop allow
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
 add_ace resource.es_extended command.add_ace allow
@@ -40,10 +36,28 @@ add_ace resource.es_extended command.stop allow
 
 ensure ox_lib
 ensure oxmysql
-ensure starts # ne pas retirez ceci sert a executer le resources.cfg si il n'y a pas d'erreur sur la version de votre artifacts / onesync / connection sql
-# Don't remove `ensure start`, you need it to execute resources.cfg, this resource check if you got some error like (artifacts outdate / onesync off / not connected to mysql) 
-
-# VEUILLEZ NE PAS START DE RESSOUCE ICI!!! ALLEZ LES START DANS resources.cfg
-# DON'T START RESOURCE HERE, START THEM IN resources.cfg
 
 #svgui # vous pouvez utilisez ceci si votre système d'exploitation est windows
+
+## Mapping & Modding (Load modding & mapping before start other ressource is better to check error without scroll up a lot xD)
+
+## These resources will start by default [fivem].
+ensure chat
+ensure spawnmanager
+ensure sessionmanager
+ensure hardcap
+
+## Framework & Main resource High dependancy [core & ox]
+#ensure screenshot-basic
+ensure cron
+ensure skinchanger
+ensure es_extended
+
+ensure ox_target
+ensure ox_inventory
+
+ensure [default_esx] # all resource default esx
+
+## Else resource (job/shop/activity/properties ...)
+
+ensure [jobs]
